Finalizando frontend: telas prontas

--- a/css/main.css
+++ b/css/main.css
@@ -1,229 +1,130 @@
-body
-{
-	margin: 0;
-	padding: 0;
-	color: #555;
-	font: normal 10pt Arial,Helvetica,sans-serif;
-	background: #EFEFEF;
+body {
+  font-family: Arial;
+  background: #fafafa;
+  margin: 0;
+}
+  
+.header {
+  padding: 30px;
+  background: white;
+  height: 20px;
 }
 
-#page
-{
-	margin-top: 5px;
-	margin-bottom: 5px;
-	background: white;
-	border: 1px solid #C9E0ED;
+.logo {
+  margin-left: 60px;
+  margin-bottom: auto;
 }
 
-#header
-{
-	margin: 0;
-	padding: 0;
-	border-top: 3px solid #C9E0ED;
+.navbar {
+  width: 100%;
+  background-color: #ea824b;
+  text-align: center;
+  color: white;
 }
 
-#content
-{
-    padding: 20px;
+.logo-text {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
 }
 
-#sidebar
-{
-	padding: 20px 20px 20px 0;
+.operations {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
-#footer
-{
-	padding: 10px;
-	margin: 10px 20px;
-	font-size: 0.8em;
-	text-align: center;
-	border-top: 1px solid #C9E0ED;
+.operations li {
+  margin-left: 10px;
+  font-size: 15px;
+  color: white;
+  border-radius: 10px;
+  margin-top: 10px;
+  width: 150px;
+  border: 2px solid #ea824b;
+  display: inline-block;
 }
 
-#logo
-{
-	padding: 10px 20px;
-	font-size: 200%;
+.operations li a {
+  text-decoration: none;
+  color: #ea824b;
 }
 
-#mainmenu
-{
-	background:white url(bg.gif) repeat-x left top;
+.operations li:hover {
+  background-color: #ea824b;
 }
 
-#mainmenu ul
-{
-	padding:6px 20px 5px 20px;
-	margin:0px;
+.operations li a:hover {
+  text-decoration: none;
+  color: white;
 }
 
-#mainmenu ul li
-{
-	display: inline;
+.content {
+  float: left;
+  width: 65%;
+  margin-right: 30px;
 }
 
-#mainmenu ul li a
-{
-	color:#ffffff;
-	background-color:transparent;
-	font-size:12px;
-	font-weight:bold;
-	text-decoration:none;
-	padding:5px 8px;
+.sidebar {
+  float: left;
+  width: 25%;
 }
 
-#mainmenu ul li a:hover, #mainmenu ul li.active a
-{
-	color: #6399cd;
-	background-color:#EFF4FA;
-	text-decoration:none;
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
-div.flash-error, div.flash-notice, div.flash-success
-{
-	padding:.8em;
-	margin-bottom:1em;
-	border:2px solid #ddd;
-}
 
-div.flash-error
-{
-	background:#FBE3E4;
-	color:#8a1f11;
-	border-color:#FBC2C4;
-}
-
-div.flash-notice
-{
-	background:#FFF6BF;
-	color:#514721;
-	border-color:#FFD324;
-}
-
-div.flash-success
-{
-	background:#E6EFC2;
-	color:#264409;
-	border-color:#C6D880;
-}
-
-div.flash-error a
-{
-	color:#8a1f11;
-}
-
-div.flash-notice a
-{
-	color:#514721;
-}
-
-div.flash-success a
-{
-	color:#264409;
-}
-
-div.form .rememberMe label
-{
-	display: inline;
-}
-
-div.view
-{
-	padding: 10px;
-	margin: 10px 0;
-	border: 1px solid #C9E0ED;
-}
-
-div.breadcrumbs
-{
-	font-size: 0.9em;
-	padding: 5px 20px;
-}
-
-div.breadcrumbs span
-{
-	font-weight: bold;
-}
-
-div.search-form
-{
-	padding: 10px;
-	margin: 10px 0;
-	background: #eee;
-}
-
-.portlet
-{
+.sidebar {
+  background-color: white;
+  padding: 20px;
+  margin-top: 10px;
+  margin-bottom: 0;
+  font-size: 25px;
+  font-weight: bold;
+  text-align: center;
+  border: 2px solid #ea824b;
 
 }
 
-.portlet-decoration
-{
-	padding: 3px 8px;
-	background: #B7D6E7;
-	border-left: 5px solid #6FACCF;
+.sidebar_item {
+  margin-top: 20px;
+  text-align: center;
+  width: 100%;
 }
 
-.portlet-title
-{
-	font-size: 12px;
-	font-weight: bold;
-	padding: 0;
-	margin: 0;
-	color: #298dcd;
+.category_main {
+  background-color: #ea824b;
+  color: white;
+  font-size: 13px;
+  text-align: center;
+  margin-left: 10px;
+  width: 120px;
+  height: 20px;
+  line-height: 20px;
+  border-radius: 15px;
+  font-weight: bold;
+  display: inline-block;
 }
 
-.portlet-content
-{
-	font-size:0.9em;
-	margin: 0 0 15px 0;
-	padding: 5px 8px;
-	background:#EFFDFF;
+.category_main a {
+  text-decoration: none;
+  color: white;
 }
-
-.portlet-content ul
-{
-	list-style-image:none;
-	list-style-position:outside;
-	list-style-type:none;
-	margin: 0;
-	padding: 0;
+  
+.footer {
+  padding: 10px;
+  font-size: 10px;
+  text-align: center;
+  background:#ea824b;
+  color: white;
+  margin-top: 20px;
 }
-
-.portlet-content li
-{
-	padding: 2px 0 4px 0px;
-}
-
-.operations
-{
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
-
-.operations li
-{
-	padding-bottom: 2px;
-}
-
-.operations li a
-{
-	font: bold 12px Arial;
-	color: #0066A4;
-	display: block;
-	padding: 2px 0 2px 8px;
-	line-height: 15px;
-	text-decoration: none;
-}
-
-.operations li a:visited
-{
-	color: #0066A4;
-}
-
-.operations li a:hover
-{
-	background: #80CFFF;
+  
+@media screen and (max-width: 800px) {
+  .content, .sidebar {
+    width: 100%;
+    padding: 0;
+  }
 }
