--- a/css/main.css
+++ b/css/main.css
@@ -3,16 +3,16 @@ body {
   background: #fafafa;
   margin: 0;
 }
-  
+
 .header {
-  padding: 30px;
+  padding: 20px;
   background: white;
-  height: 20px;
+  height: 40px;
+  text-align: center;
 }
 
-.logo {
-  margin-left: 60px;
-  margin-bottom: auto;
+.form_title {
+  margin-left: 15px;
 }
 
 .navbar {
@@ -25,6 +25,12 @@ body {
 .logo-text {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .operations {
@@ -62,30 +68,22 @@ body {
   float: left;
   width: 65%;
   margin-right: 30px;
+  margin-top: 15px;
+  margin-bottom:100px;
 }
 
 .sidebar {
   float: left;
   width: 25%;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-
-.sidebar {
   background-color: white;
   padding: 20px;
-  margin-top: 10px;
-  margin-bottom: 0;
+  margin-top: 15px;
   font-size: 25px;
   font-weight: bold;
   text-align: center;
   border: 2px solid #ea824b;
-
+  border-radius: 5px;
+  margin-bottom: 10%;
 }
 
 .sidebar_item {
@@ -119,8 +117,9 @@ body {
   text-align: center;
   background:#ea824b;
   color: white;
-  margin-top: 20px;
+  margin-top: auto;
 }
+
   
 @media screen and (max-width: 800px) {
   .content, .sidebar {
