--- a/css/pager.css
+++ b/css/pager.css
@@ -10,4 +10,13 @@
     font-size: 15px;
     color: white;
     border-radius: 10px;
+    text-decoration: none;
+}
+
+.yiiPager li a {
+    text-decoration: none;
+    width: 100%;
+    height: 20px;
+    border-radius: 5px;
+    color: #ea824b;
 }
